demo-vm2/svc_route.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-httpd-service
  labels:
    app2: httpd
spec:
  selector:
    app2: httpd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-httpd-route
  labels:
    app2: httpd
spec:
  to:
    kind: Service
    name: my-httpd-service
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
